# sc-platform

./: .astylerc  .gitignore  .yamllint  ABOUT_ASYNC.md  ABOUT_BUS.md  ABOUT_CACHE.md  ABOUT_CONFIG.md  ABOUT_CPU.md  ABOUT_CPUID_EXTN.md  ABOUT_DMA.md  ABOUT_ENUMS.md  ABOUT_EXCL.md  ABOUT_FANOUT.md  ABOUT_MAILBOX.md  ABOUT_MEMORY.md  ABOUT_MMU.md  ABOUT_MODULES.md  ABOUT_NOCLOCK.md  ABOUT_PIC.md  ABOUT_POWER.md  ABOUT_REPORT.md  ABOUT_RESET.md  ABOUT_SECURE.md  ABOUT_SUMMARY.md  ABOUT_TASK.md  ABOUT_TIMER.md  ABOUT_UART.md  ABOUT_WALLCLOCK.md  CMakeLists.txt  GNUmakefile  LICENSE-APACHE.txt  README.md  TESTED.md  USING_extn  async_if.hpp  async_kind.cpp  async_kind.hpp  async_payload.cpp  async_payload.hpp  async_rx.hpp  (+135 more)
async/: ABOUT_ASYNC.md  async_if.hpp  async_kind.cpp  async_kind.hpp  async_payload.cpp  async_payload.hpp  async_rx.hpp  async_tx.hpp
bus/: ABOUT_BUS.md  bus.cpp  bus.hpp  map_test.cpp  memory_map.cpp  memory_map.hpp  route_extn.hpp
cache/: ABOUT_CACHE.md  cache_extn.hpp
cmake/: SystemC.cmake  strict.cmake
common/: common.cpp  common.hpp  log2.c  log2.cpp  log2.hpp  macros.h  require_version.hpp  requires.cpp
config/: ABOUT_CONFIG.md  config_extn.cpp  config_extn.hpp  config_proxy.cpp  config_proxy.hpp  configuration.cpp  configuration.hpp
cpu/: ABOUT_CPUID_EXTN.md  ABOUT_TASK.md  cpu.cpp  cpu.hpp  cpu_if.hpp  cpuid_extn.cpp  cpuid_extn.hpp  task.cpp  task.hpp
dma/: ABOUT_DMA.md  dma.cpp
dmi/: dmi_extn.cpp  dmi_extn.hpp
exclusive/: ABOUT_EXCL.md  excl_extn.cpp  excl_filt.cpp  excl_filt.hpp
gpio/: ABOUT_GPIO.md  gpio.cpp  gpio.hpp  gpio_reg.h  rgbled.cpp
interrupt/: ABOUT_INTERRUPT.md  ABOUT_PIC.md  interrupt.hpp  interrupt_if.hpp  pic.cpp  pic.hpp  pic_api.hpp  pic_reg.h
mailbox/: mailbox.cpp  mailbox.hpp
memory/: ABOUT_MEMORY.md  memory.cpp  memory.hpp  memory_test.cpp
mmu/: ABOUT_MMU.md  mmu.cpp  mmu.hpp  mmu_extn.hpp
no_clock/: ABOUT_NOCLOCK.md  no_clock.cpp  no_clock.hpp  no_clock_if.hpp
power/: power.cpp
report/: ABOUT_REPORT.md  ABOUT_SUMMARY.md  commandline.hpp  report.cpp  report.hpp  report_test.cpp  summary.cpp
scx/: freq_test.cpp  sc_cxx11.hpp  sc_freq.cpp  sc_freq.hpp  sc_time_literal.h  sc_time_literals.hpp
secure/: ABOUT_SECURE.md  secure_extn.cpp  secure_extn.hpp
tcpip/: client.c  server.c  tcpip_if.hpp  tcpip_rx.cpp  tcpip_rx.hpp  tcpip_rx_if.hpp  tcpip_tx.cpp  tcpip_tx.hpp  tcpip_tx_if.hpp
timer/: ABOUT_TIMER.md  timer.cpp  timer.hpp  timer_api.hpp  timer_beh.cpp  timer_beh.hpp  timer_reg.h  timer_test.cpp
top/: ABOUT_MAIN.md  ABOUT_NEWS.md  ABOUT_WALLCLOCK.md  main.cpp  netlist.cpp  netlist.hpp  news.cpp  options.cpp  options.hpp  platform_enum.cpp  platform_enum.hpp  stub.cpp  stub.hpp  top.cpp  wallclock.cpp
uart/: ABOUT_UART.md  parity.cpp  parity.hpp  uart.cpp  uart.hpp  uart_reg.h
unit_test/: test_enum.cpp  test_enum.hpp  xyaml.cpp
utility/: ansi.hpp  convert.hpp  hexfile.cpp  hexfile.hpp  memory_manager.hpp  signal.cpp  signal.hpp
